# Modflow-API-Ag-Package

./: CONTRIBUTING.md  MANIFEST.in  README.md  code.json  input_variables.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
ag_test_scripts/: build_nwt_models.py  compare_ag_mvr_sfr.py  compare_ag_mvr_well.py  test_ag_diversions.py  test_ag_mvr_sfr.py  test_ag_mvr_wells.py  test_ag_wells.py
agmvr_test_models/: compare_ag_mvr_conjunctive.py
autotest/: common.py  test_000.py  test_001.py  test_002.py  test_003.py  test_004.py  test_005.py  test_006.py
data/: almond_kcs.csv  calculate_ppt_eto_averages.py  cimis_davis_monthly.csv  davis_monthly_ppt_eto.txt
data/mf6_etdemand_test_problems/: etdemand_div.dis  etdemand_div.hds  etdemand_div.ic  etdemand_div.ims  etdemand_div.mvr  etdemand_div.nam  etdemand_div.npf  etdemand_div.obs  etdemand_div.obs.out  etdemand_div.oc  etdemand_div.sfr  etdemand_div.sto  etdemand_div.tdis  etdemand_div.uzf  etdemand_div_ag.out  etdemand_div_mvr.cbc  etdemand_div_mvr.csv  etdemand_sup.dis  etdemand_sup.ic  etdemand_sup.ims  etdemand_sup.mvr  etdemand_sup.nam  etdemand_sup.npf  etdemand_sup.obs  etdemand_sup.oc  etdemand_sup.sfr  etdemand_sup.sto  (+20 more)
develop_AG_mvr/: get_mvr_budget.py  mf6_ag_mvr.py
develop_ag_v2/: develop_mf6_AG2.py
dfn/: gwf-agmvr.dfn
docs/: documentation.md  mf6api_agmvr_docs.md
etc/: environment.yml
etdemand_gwet_test_model/: build_nwt_models.py  compare_ag_mvr_conjunctive.py  compare_ag_mvr_sfr.py  compare_ag_mvr_well.py
etdemand_test_model/: build_nwt_models.py  compare_ag_mvr_conjunctive.py  compare_ag_mvr_sfr.py  compare_ag_mvr_well.py  compare_gaged_flow.py  compare_heads.py  plot_models.py
examples/: docs_example.py  quickstart.py
lak_test_model/: ag_mvr_lak.py
maw_test_model/: ag_mvr_maw.py
mf6api_ag/: __init__.py  agmvr.py  mf6apiag.py  mfgwfapiag.py  version.py
mf6api_agmvr/: __init__.py  mf6_agmvr.py  mfgwfagmvr.py  version.py
test_model_adjust_pumping/: mf6_adjust_pumping.py
test_model_simple/: mf6_simple.py
test_model_year/: mf6_simple_year.py
test_model_year_adjust_by_kc/: mf6_year_kc.py
test_model_year_adjust_kc2/: develop_mf6_AG.py
(+198 files in other folders)
