[metadata]
name = mf6api_agmvr
version = attr: mf6api_agmvr.__version__
description = An Agricultural Water Mover package for MODFLOW-6 through the modflowapi
long_description = file: README.md LICENSE.md
long_description_content_type = text/markdown
author = Joshua D. Larsen
author_email = jlarsen@usgs.gov
maintainer = Joshua D. Larsen
maintainer_email = jlarsen@usgs.gov
keywords = MODFLOW, groundwater, hydrogeology, agriculture, modflowapi 
license = The Unlicense
license_files = LICENSE.md
classifiers = 
	Programming Language :: Python :: 3
	Topic :: Scientific/Engineering :: Hydrology
url = https://github.com/jlarsen-usgs/modflowapi_Agmvr
download_url = https://github.com/jlarsen-usgs/modflowapi_Agmvr
	
[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires = 
	numpy >= 1.15.0
	pandas
	flopy >= 3.3.4
	modflowapi
	
